erDiagram
	direction LR
	USER {
		uuid id PK "Supabase auth.users"
		string email  ""
		jsonb user_metadata  "contains username"
		datetime created_at  ""
	}

	QUIZ {
		int id PK ""
		string title  ""
		string description  ""
		uuid creator_id FK ""
		string share_code  ""
		datetime created_at  ""
	}

	QUESTION {
		int id PK ""
		int quiz_id FK ""
		string text  ""
		questionType type  ""
		json options  ""
		string correct_answer  ""
		int time_limit  ""
		int points  ""
		int order_index  ""
	}

	SESSION {
		int id PK ""
		int quiz_id FK ""
		string pin  ""
		string status  ""
		uuid host_id FK ""
		datetime started_at  ""
	}

	SESSION_PLAYER {
		int id PK ""
		int session_id FK ""
		uuid user_id FK ""
		string username  ""
		int score  ""
		int lives  ""
		string status  ""
	}

	GAME_EVENT {
		int id PK ""
		int session_id FK ""
		int session_player_id FK ""
		string event_type  ""
		json data  ""
		datetime created_at  ""
	}

	USER||--o{QUIZ:"creates"
	QUIZ||--o{QUESTION:"contains"
	USER||--o{SESSION:"hosts"
	QUIZ||--o{SESSION:"used_in"
	SESSION||--o{SESSION_PLAYER:"has"
	USER||--o{SESSION_PLAYER:"plays_as"
	SESSION_PLAYER||--o{GAME_EVENT:"generates"
	SESSION||--o{GAME_EVENT:"logs"
